Add Container, without set,map, stack,queue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.4)
 
 project(log)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 14)
 
-add_executable(log test.cpp logger.hpp logger.cpp)
+add_executable(log test.cpp logger.hpp)
